--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@ version: 2
 jobs:
   build:
     working_directory: ~/reactnd-project-readable
+    machine:
+      node:
+        version: 6.1.0
+      npm:
+        version: 4.2.0
     steps:
       - checkout
       - run:
