feat: add UI components

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "enzyme": "^2.9.1",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
