--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-icons": "^2.2.5",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "react-dom": "15.6.1",
