--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
