--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
   },
